--- a/style.css
+++ b/style.css
@@ -5,14 +5,15 @@
 .navbar {
     background-color: #dab1ec;
 }
+
 .body-bg {
     background-color: #e2eafc;
     font-family: 'Open Sans Condensed', sans-serif;
-    background-image: url(images/day.jpeg);
+    /* background-image: url(images/day.jpeg);
     background-repeat: no-repeat;
     background-attachment: fixed;
-    background-size: cover;
-    color: #A8DADC;
+    background-size: cover; */
+    
 }
 .navbar-dark {
     background-color: #1a535c;
@@ -21,10 +22,6 @@
 .dark{
     background-color: rgb(22, 21, 21);
     color: aliceblue;
-    background-image: url(images/night.png);
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: cover;
 }
 div.head-add-student {
     width: 100%;
@@ -53,6 +50,28 @@ div.students-list-container {
     width: 70%;
     text-align: center;
     margin: 10px;
+}
+div#aboutUs {
+    background-color: #e7e6b2;
+    color: #2b323a;
+    padding: 100px;
+    
+}
+div#aboutUs div{
+    display: flex;
+    justify-content: space-between;
+}
+div#contactUs {
+    background-color: #c19fcc;
+    padding: 100px;
+    
+}
+div#contactUs div {
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    transition: 0.3s ease;
 }
 .footer-content{
     background-color: #e9ecef;
