--- a/style.css
+++ b/style.css
@@ -3,25 +3,23 @@
     padding: 0;
 }
 .navbar {
-    background-color: #dab1ec;
     color: #2b323a;
     font-size: 25px;
     font-weight: 70px;
+    background-image: linear-gradient(to top, #E6DADA,#55747c);
 }
-
 .body-bg {
-    background-color: #e2eafc;
     color: #2b323a;
     font-family: 'Open Sans Condensed', sans-serif;
-    
+    background-image: linear-gradient(to right, #e5f8e9,#7da5b1);
 }
 .navbar-dark {
-    background-color: #1a535c;
-    color: aliceblue; 
+    background-image: linear-gradient(to top, #f5d7e6,#143e44);
+    color: #2b323a;
 }
 .dark{
-    background-color: rgb(22, 21, 21);
-    color: aliceblue;
+    color: black;
+    background-image: linear-gradient(to right, #1b1a1b, #7a767a);
 }
 div.head-add-student {
     width: 100%;
@@ -41,7 +39,7 @@ div.head-add-student button {
     font-size: 30px;
     font-weight: 700;
     padding: 15px;
-    background-color: rgb(238, 238, 161);
+    background-image: linear-gradient(to bottom, #343ba3, #9bb9e5);
 }
 div.students-list-container {
     width:70%;
@@ -49,7 +47,7 @@ div.students-list-container {
     font-size: 18px;
 }   
 .table-hover {
-    background-color: #afecdf;
+    background-image: linear-gradient(to top, rgb(150, 79, 79), rgb(204, 161, 161));
     text-align:center;
 }
 .std-summary {
@@ -61,7 +59,7 @@ div#aboutUs {
     background-color: #e7e6b2;
     color: #2b323a;
     padding: 100px;
-    
+    background-image: linear-gradient(to top, #e7e6b2, #646443);
 }
 div#aboutUs div{
     display: flex;
@@ -69,9 +67,8 @@ div#aboutUs div{
     align-items: center;
 }
 div#contactUs {
-    background-color: #c19fcc;
     padding: 100px;
-    
+    background-image: linear-gradient(to top, #c19fcc, #3e2b44);
 }
 div#contactUs div {
     text-align: center;
@@ -81,7 +78,7 @@ div#contactUs div {
     transition: 0.3s ease;
 }
 .footer-content{
-    background-color: #e9ecef;
+    background-image: linear-gradient(to right, #91908f, #bbabba);
     border-style: none;    
     height: 35px;
     width: 100%;
@@ -94,6 +91,6 @@ div#contactUs div {
     bottom: 0;
  }
  .footer-dark {
-     background-color: #303235;
-     color: #727272;
+     background-image: linear-gradient(to right, #363536, #727272);
+     color: #0e0d0d;
  }
